--- a/public/chat.css
+++ b/public/chat.css
@@ -196,7 +196,6 @@ main.flex {
 
 main.chat {
   padding: 10px;
-  overflow-y: scroll;
 }
 
 main.chat img.avatar {
@@ -250,4 +249,55 @@ main.chat .message p.message-header span.sent-date {
 
 .bot #send-message {
   display: none;
+}
+
+
+/** overrides **
+ */
+@font-face {
+  font-family: 'cmu_brightsemibold';
+  src: url('./assets/fonts/cmunbsr-webfont.eot');
+  src: url('./assets/fonts/cmunbsr-webfont.eot?#iefix') format('embedded-opentype'),
+  url('./assets/fonts/cmunbsr-webfont.woff2') format('woff2'),
+  url('./assets/fonts/cmunbsr-webfont.woff') format('woff'),
+  url('./assets/fonts/cmunbsr-webfont.ttf') format('truetype'),
+  url('./assets/fonts/cmunbsr-webfont.svg#cmu_brightsemibold') format('svg');
+  font-weight: normal;
+  font-style: normal;
+
+}
+
+
+body {
+  background-color: #000000;
+  color: #f700ff;
+  font-family: cmu_brightsemibold, sans-serif;
+}
+
+.message.bot {
+  color: #fff;
+}
+
+#send-message {
+  margin-bottom: 1rem;
+}
+#send-message input {
+  color: #fff;
+  background-color: #000;
+  border: 0;
+  border-bottom: 2px solid #fff;
+  font-family: cmu_brightsemibold, sans-serif;
+  font-weight: 500;
+}
+
+.message-content {
+  justify-content: center;
+  text-align: center;
+  width: 100%;
+  display: flex;
+  flex-grow: 1;
+}
+
+.message-wrapper {
+  flex-grow: 1;
 }
