--- a/public/chat.css
+++ b/public/chat.css
@@ -242,7 +242,7 @@ main.chat .message p.message-header span.sent-date {
 }
 
 .spinner {
-  background-image: url(https://www.merlett.com/wp-content/themes/merlett/images/blank.gif);
+  background-image: url(/assets/img/ajax-loader.gif);
   background-position: center center;
   background-repeat: no-repeat;
 }
